add_subdirectory(main)

if (DEMO)
    add_subdirectory(para)
    add_subdirectory(p2p)
    add_subdirectory(consensus)
    add_subdirectory(blockverifier)
    add_subdirectory(sync)
    add_subdirectory(evm)
    add_subdirectory(rpc)
    add_subdirectory(storage)
    add_subdirectory(benchmark)
endif()
